policies/tests/require-run-as-nonroot/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-run-as-nonroot-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: require-run-as-nonroot
    rule: require-pod-run-as-nonroot
    resource: nonroot-secure-pod
    kind: Pod
    result: pass
  - policy: require-run-as-nonroot
    rule: require-pod-run-as-nonroot
    resource: nonroot-insecure-pod
    kind: Pod
    result: fail
  - policy: require-run-as-nonroot
    rule: require-container-run-as-nonroot
    resource: nonroot-secure-pod
    kind: Pod
    result: pass
  - policy: require-run-as-nonroot
    rule: require-container-run-as-nonroot
    resource: nonroot-insecure-pod
    kind: Pod
    result: fail
